@@ -85,7 +85,7 @@ extern z80_byte *hilow_device_buffer;
 //espacio en segundos al principio y final de cinta que no se puede escribir (esa parte en blanco sin zona magnetica)
 #define HILOW_RAW_ZONA_BLANCA_SEC 3
 
-extern void hilow_device_mem_format(int si_escribir_en_ram,int si_escribir_en_device,char *label,int lados);
+extern void hilow_device_mem_format(int si_escribir_en_ram,int si_escribir_en_device,char *label,int lados,int con_borrado);
 
 extern void hilow_tapa_action_was_opened(void);
 
